@@ -8,6 +8,8 @@ openmediavault (0.3.0.26) stable; urgency=low
 
   * Update mdadm.conf during system initialization to import existing
     RAID arrays.
+  * Display a notification to reload the page after plugins have been
+    updated via the update manager in the WebGUI.
 
  -- Volker Theile <volker.theile@openmediavault.org>  Fri, 14 Sep 2012 20:46:54 +0200
 
